--- a/xkb/Makefile.am
+++ b/xkb/Makefile.am
@@ -37,11 +37,7 @@ X11_SRCS = \
         XKBGAlloc.c \
         XKBMAlloc.c
 
-# ends up unused...
-# XI_SRCS = xkbPrOtherEv.c
-
-libxkb_la_SOURCES = $(DDX_SRCS) $(DIX_SRCS) $(XI_SRCS) $(XKBFILE_SRCS) \
-                    $(X11_SRCS)
+libxkb_la_SOURCES = $(DDX_SRCS) $(DIX_SRCS) $(XKBFILE_SRCS) $(X11_SRCS)
 libxkbstubs_la_SOURCES = ddxVT.c ddxPrivate.c ddxKillSrv.c
 
 EXTRA_DIST = xkbDflts.h xkbgeom.h xkb.h
