--- a/include/dix-config.h.in
+++ b/include/dix-config.h.in
@@ -429,6 +429,14 @@
 /* Define to 1 if you have the `ffs' function. */
 #undef HAVE_FFS
 
-#include <dix-config-post-verbatim.h>
+/* Correctly set _XSERVER64 for OSX fat binaries */
+#ifdef __APPLE__
+#if defined(__LP64__) && !defined(_XSERVER64)
+#define _XSERVER64 1
+#elif !defined(__LP64__) && defined(_XSERVER64)
+/* configure mangles #undef, so we fix this in AC_CONFIG_HEADERS post process */
+/undef _XSERVER64
+#endif
+#endif
 
 #endif /* _DIX_CONFIG_H_ */
