Explicitly add libxorg_la_LIBADD to libxorg_la_DEPENDENCIES
  Otherwise, for example, when hacking config/*.c, it is required to
run make clean on that directory, to ensure the proper libconfig.a
will be linked in the generated Xorg binary.

--- a/hw/xfree86/Makefile.am
+++ b/hw/xfree86/Makefile.am
@@ -48,6 +48,8 @@ libxorg_la_LIBADD = \
             $(top_builddir)/os/libos.la \
             @XORG_LIBS@
 
+libxorg_la_DEPENDENCIES = $(libxorg_la_LIBADD)
+
 libxorg.c xorg.c:
 	touch $@
 
