--- a/hw/kdrive/src/Makefile.am
+++ b/hw/kdrive/src/Makefile.am
@@ -4,7 +4,7 @@ INCLUDES = 					\
 
 AM_CFLAGS =	-DHAVE_DIX_CONFIG_H
 
-noinst_LIBRARIES = libkdrive.a libkdrivestubs.a
+noinst_LTLIBRARIES = libkdrive.la libkdrivestubs.la
 
 if KDRIVE_HW
 KDRIVE_HW_SOURCES =	\
@@ -18,7 +18,7 @@ KDRIVE_XV_SOURCES =	\
 	kxv.h
 endif
 
-libkdrive_a_SOURCES =	\
+libkdrive_la_SOURCES =	\
 	fourcc.h	\
 	kcmap.c		\
 	kcurscol.c	\
@@ -34,5 +34,5 @@ libkdrive_a_SOURCES =	\
 	$(KDRIVE_HW_SOURCES) \
         $(top_srcdir)/mi/miinitext.c
 
-libkdrivestubs_a_SOURCES = \
+libkdrivestubs_la_SOURCES = \
         $(top_srcdir)/fb/fbcmap_mi.c
