--- a/dix/Makefile.am
+++ b/dix/Makefile.am
@@ -17,6 +17,8 @@ libdix_la_SOURCES = 	\
 	enterleave.c	\
 	enterleave.h	\
 	events.c	\
+	eventconvert.h  \
+	eventconvert.c  \
 	extension.c	\
 	ffs.c		\
 	gc.c		\
