--- a/include/dix-config.h.in
+++ b/include/dix-config.h.in
@@ -422,12 +422,7 @@
 
 /* Correctly set _XSERVER64 for OSX fat binaries */
 #ifdef __APPLE__
-#if defined(__LP64__) && !defined(_XSERVER64)
-#define _XSERVER64 1
-#elif !defined(__LP64__) && defined(_XSERVER64)
-/* configure mangles #undef, so we fix this in AC_CONFIG_HEADERS post process */
-/undef _XSERVER64
-#endif
+#include "dix-config-apple-verbatim.h"
 #endif
 
 #endif /* _DIX_CONFIG_H_ */
