Add XI2 masks and XISelectEvent() request handling.
XI2 event masks are simply stored in the OtherEventMasks as a separate field.
This replaces the XiSelectEvent code.

--- a/Xi/Makefile.am
+++ b/Xi/Makefile.am
@@ -94,7 +94,7 @@ libXi_la_SOURCES =	\
 	warpdevp.h \
 	xiproperty.c \
 	xiproperty.h \
-	xiselev.c \
-	xiselev.h
+	xiselectev.c \
+	xiselectev.h
 
 EXTRA_DIST = stubs.c
