--- a/hw/xfree86/exa/Makefile.am
+++ b/hw/xfree86/exa/Makefile.am
@@ -7,7 +7,8 @@ INCLUDES = \
 	-I$(srcdir)/../../../exa \
 	-I$(srcdir)/../../../miext/cw
 
-AM_CFLAGS = $(DIX_CFLAGS) $(XORG_CFLAGS)
+# Use an arbitrary high major version here to satisfy any driver checks in exa.h
+AM_CFLAGS = $(DIX_CFLAGS) $(XORG_CFLAGS) -DEXA_DRIVER_KNOWN_MAJOR=99
 
 libexa_la_SOURCES = \
 	examodule.c
