Revert "EXA: Handle separate alpha maps properly in Composite fallback."
This reverts commit 170cf1270dff38d3cce7f5ba5b940d1c0d70eff5.

Conflicts:

	exa/exa_render.c

--- a/exa/Makefile.am
+++ b/exa/Makefile.am
@@ -12,8 +12,7 @@ INCLUDES = \
 	$(XORG_INCS) \
 	-I$(srcdir)/../miext/cw
 
-# Use an arbitrary high major version here to satisfy any driver checks in exa.h
-AM_CFLAGS = $(XORG_CFLAGS) $(DIX_CFLAGS) -DEXA_DRIVER_KNOWN_MAJOR=99
+AM_CFLAGS = $(XORG_CFLAGS) $(DIX_CFLAGS)
 
 libexa_la_SOURCES = \
 	exa.c \
