Xi: add support for XIAllowEvents.
Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/Xi/Makefile.am
+++ b/Xi/Makefile.am
@@ -92,6 +92,8 @@ libXi_la_SOURCES =	\
 	ungrdevk.h \
 	warpdevp.c \
 	warpdevp.h \
+	xiallowev.c \
+	xiallowev.h \
 	xigrabdev.c \
 	xigrabdev.h \
 	xiproperty.c \
