--- a/hw/xfree86/os-support/solaris/Makefile.am
+++ b/hw/xfree86/os-support/solaris/Makefile.am
@@ -4,12 +4,11 @@ else
 VTSW_SRC = $(srcdir)/../shared/VTsw_noop.c
 endif
 
-# TODO: Don't build agpgart on SPARC
-#if defined(i386Architecture) || defined(AMD64Architecture)
+if AGP
 AGP_SRC = sun_agp.c
-#else
-#AGP_SRC = $(srcdir)/../shared/agp_noop.c
-#endif
+else
+AGP_SRC = $(srcdir)/../shared/agp_noop.c
+endif
 
 SOLARIS_INOUT_SRC = solaris-@SOLARIS_INOUT_ARCH@.S
 DISTCLEANFILES = solaris-@SOLARIS_INOUT_ARCH@.il
@@ -28,7 +27,7 @@ libsolaris_la_SOURCES = sun_init.c \
 	$(VTSW_SRC)
 nodist_libsolaris_la_SOURCES = $(SOLARIS_INOUT_SRC)
 
-sdk_HEADERS = agpgart.h
+sdk_HEADERS =
 nodist_sdk_HEADERS = solaris-@SOLARIS_INOUT_ARCH@.il
 
 AM_CFLAGS = -DUSESTDRES -DHAVE_SYSV_IPC $(XORG_CFLAGS) $(DIX_CFLAGS)
