Xi: add GrabButton and GrabKeysym code.
We don't do keycode grabs in XI2, they're pointless.

--- a/Xi/Makefile.am
+++ b/Xi/Makefile.am
@@ -96,6 +96,8 @@ libXi_la_SOURCES =	\
 	xiallowev.h \
 	xigrabdev.c \
 	xigrabdev.h \
+	xipassivegrab.h \
+	xipassivegrab.c \
 	xiproperty.c \
 	xiproperty.h \
 	xiselectev.c \
