test: check from INT_MIN to INT_MAX for core type conversion
ErrorF is link-wrapped to reduce the run-time of the test.

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -10,6 +10,7 @@ TEST_LDADD=libxservertest.la $(XORG_SYS_LIBS) $(XSERVER_SYS_LIBS) $(GLIB_LIBS)
 
 xkb_LDADD=$(TEST_LDADD)
 input_LDADD=$(TEST_LDADD)
+input_CFLAGS=$(AM_CFLAGS) -Wl,-wrap,ErrorF
 
 libxservertest_la_LIBADD = \
             $(XSERVER_LIBS) \
