--- a/hw/xfree86/ddc/Makefile.am
+++ b/hw/xfree86/ddc/Makefile.am
@@ -2,7 +2,7 @@ sdk_HEADERS = edid.h xf86DDC.h
 
 noinst_LTLIBRARIES = libddc.la
 
-libddc_la_SOURCES = xf86DDC.c interpret_edid.c print_edid.c ddcProperty.c
+libddc_la_SOURCES = ddc.c interpret_edid.c print_edid.c ddcProperty.c
 
 INCLUDES = $(XORG_INCS) -I$(srcdir)/../i2c
 
