test: add ProcXISelectEvents tests.
Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/test/xi2/Makefile.am
+++ b/test/xi2/Makefile.am
@@ -1,7 +1,8 @@
 if UNITTESTS
 check_PROGRAMS =  \
 	protocol-xiqueryversion \
-	protocol-xiquerydevice
+	protocol-xiquerydevice \
+	protocol-xiselectevents
 
 TESTS=$(check_PROGRAMS)
 
@@ -12,10 +13,13 @@ COMMON_SOURCES=protocol-common.h protocol-common.c
 
 protocol_xiqueryversion_LDADD=$(TEST_LDADD)
 protocol_xiquerydevice_LDADD=$(TEST_LDADD)
+protocol_xiselectevents_LDADD=$(TEST_LDADD)
 
 protocol_xiqueryversion_CFLAGS=$(AM_CFLAGS) -Wl,-wrap,WriteToClient
 protocol_xiquerydevice_CFLAGS=$(AM_CFLAGS) -Wl,-wrap,WriteToClient
+protocol_xiselectevents_CFLAGS=$(AM_CFLAGS) -Wl,-wrap,dixLookupWindow -Wl,-wrap,XISetEventMask
 
 protocol_xiqueryversion_SOURCES=$(COMMON_SOURCES) protocol-xiqueryversion.c
 protocol_xiquerydevice_SOURCES=$(COMMON_SOURCES) protocol-xiquerydevice.c
+protocol_xiselectevents_SOURCES=$(COMMON_SOURCES) protocol-xiselectevents.c
 endif
