xorg-server.h.in: Export the X Access Control Extension (XACE), too.
Acked-by: Daniel Stone <daniel@fooishbar.org>

--- a/include/xorg-server.h.in
+++ b/include/xorg-server.h.in
@@ -187,4 +187,7 @@
 /* Use libpciaccess */
 #undef XSERVER_LIBPCIACCESS
 
+/* X Access Control Extension */
+#undef XACE
+
 #endif /* _XORG_SERVER_H_ */
