xfree86: DIST_SUBDIRS should not contain variables
This patch reverts a change done in commit
800d4ceb946c93724661ebfd28afb658ca63b6b1 to add conditional XAA support

Signed-off-by: Rémi Cardona <remi@gentoo.org>

--- a/hw/xfree86/Makefile.am
+++ b/hw/xfree86/Makefile.am
@@ -24,7 +24,7 @@ SUBDIRS = common ddc i2c x86emu int10 fbdevhw os-support parser \
 	  $(DRI_SUBDIR) $(DRI2_SUBDIR) $(XF86UTILS_SUBDIR) $(DOC_SUBDIR)
 
 DIST_SUBDIRS = common ddc i2c x86emu int10 fbdevhw os-support \
-               parser ramdac shadowfb vbe vgahw $(XAA_SUBDIR) \
+               parser ramdac shadowfb vbe vgahw xaa \
                xf8_16bpp loader dixmods dri dri2 exa modes \
 	       utils doc
 
