--- a/hw/xfree86/Makefile.am
+++ b/hw/xfree86/Makefile.am
@@ -16,10 +16,14 @@ if XAA
 XAA_SUBDIR = xaa
 endif
 
+if VGAHW
+VGAHW_SUBDIR = vgahw
+endif
+
 DOC_SUBDIR = doc
 
 SUBDIRS = common ddc i2c x86emu int10 fbdevhw os-support parser \
-	  ramdac shadowfb vbe vgahw $(XAA_SUBDIR) \
+	  ramdac shadowfb vbe $(VGAHW_SUBDIR) $(XAA_SUBDIR) \
 	  xf8_16bpp loader dixmods exa modes \
 	  $(DRI_SUBDIR) $(DRI2_SUBDIR) $(XF86UTILS_SUBDIR) $(DOC_SUBDIR)
 
