configure: introduce --{enable,disable}-int10-module
Not all chipsets need to rely on the int10 scheme to do its daily work.

Well, the ideal would be to remove all int10 module from the server. I'll try
to provide some patches "soon" for this. Something like:
    http://cgit.freedesktop.org/~vignatti/libx86/

Signed-off-by: Tiago Vignatti <tiago.vignatti@nokia.com>
Acked-by: Oliver McFadden <oliver.mcfadden@nokia.com>

--- a/hw/xfree86/Makefile.am
+++ b/hw/xfree86/Makefile.am
@@ -24,9 +24,13 @@ if VBE
 VBE_SUBDIR = vbe
 endif
 
+if INT10MODULE
+INT10_SUBDIR = int10
+endif
+
 DOC_SUBDIR = doc
 
-SUBDIRS = common ddc i2c x86emu int10 fbdevhw os-support parser \
+SUBDIRS = common ddc i2c x86emu $(INT10MODULE) fbdevhw os-support parser \
 	  ramdac shadowfb $(VBE_SUBDIR) $(VGAHW_SUBDIR) $(XAA_SUBDIR) \
 	  xf8_16bpp loader dixmods exa modes \
 	  $(DRI_SUBDIR) $(DRI2_SUBDIR) $(XF86UTILS_SUBDIR) $(DOC_SUBDIR)
