--- a/hw/xfree86/Makefile.am
+++ b/hw/xfree86/Makefile.am
@@ -30,7 +30,7 @@ endif
 
 DOC_SUBDIR = doc
 
-SUBDIRS = common ddc i2c x86emu $(INT10MODULE) fbdevhw os-support parser \
+SUBDIRS = common ddc i2c x86emu $(INT10_SUBDIR) fbdevhw os-support parser \
 	  ramdac shadowfb $(VBE_SUBDIR) $(VGAHW_SUBDIR) $(XAA_SUBDIR) \
 	  xf8_16bpp loader dixmods exa modes \
 	  $(DRI_SUBDIR) $(DRI2_SUBDIR) $(XF86UTILS_SUBDIR) $(DOC_SUBDIR)
