--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -17,6 +17,7 @@ sdk_HEADERS =		\
 	dixfontstr.h	\
 	dixgrabs.h	\
 	dixstruct.h	\
+	events.h	\
 	exevents.h	\
 	extension.h	\
 	extinit.h	\
@@ -57,10 +58,11 @@ sdk_HEADERS =		\
 	xkbrules.h      \
 	xserver-properties.h
 
-nodist_sdk_HEADERS = xorg-server.h events.h eventconvert.h
+nodist_sdk_HEADERS = xorg-server.h
 endif
 
 AM_CFLAGS = $(DIX_CFLAGS)
 
 EXTRA_DIST = 	\
-	dix-config-apple-verbatim.h
+	dix-config-apple-verbatim.h \
+	eventconvert.h
